--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "Challenge Chapter 3",
   "main": "app.js",
   "scripts": {
-    "start": "node app.js",
-    "dev": "nodemon app.js",
+    "start": "node server.js",
+    "dev": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
